--- a/1.html
+++ b/1.html
@@ -3,17 +3,63 @@
   <head>
     <title>YOON'S NBA - GSW</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">YOON'S NBA</a></h1>
-    <ul>
-      <li><a href="1.html">GSW</a></li>
-      <li><a href="2.html">LAL</a></li>
-      <li><a href="3.html">LAC</a></li>
-    </ul>
-    <h2>Golden State Warriors</h2><img src="basketball1.jpg" width="250">
-    <p><h4>Team of NBA.(<a href="https://www.nba.com/warriors/" target="_black" title="GSW official website">GSW</a>)</h4>
-      <em>Stephen Curry</em> is <strong><u>amazing</u> fantasy</strong> player! And NBA all-time no.1 3pt shooter :).</p>
-      <p style="margin-top:45px;"><em>Klay Thompson</em> is<strong>top</strong> 3&D player of NBA!</p>
+
+    <div class="main-text">
+      <div class="team-list">
+        <ul>
+          <li><a href="1.html">GSW</a></li>
+          <li><a href="2.html">LAL</a></li>
+          <li><a href="3.html">LAC</a></li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+        </ul>
+      </div>
+
+      <div class="page-intro">
+        <div class="team-logo">
+          <h2><a href="https://www.nba.com/warriors/" target="_black" title="GSW official website">골든스테이트 워리어스</a></h2>
+        </div>
+        <div class="team-intro">
+          <div class="team-logo">
+            <img src="GSW1.png">
+          </div>
+          <div class="team-info">
+            <p>팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명
+               팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명</p>
+          </div>
+          <div class="team-player">
+            <em>Stephen Curry</em>
+              <div class="curry-info">
+                <ul>
+                  <li>커리설명</li>
+                  <li>커리설명</li>
+                  <li>커리설명</li>
+                  <li>커리설명</li>
+                </ul>
+              </div>
+            <em>Klay Thompson</em>
+              <div class="thompson-info">
+                <ul>
+                  <li>탐슨설명</li>
+                  <li>탐슨설명</li>
+                  <li>탐슨설명</li>
+                  <li>탐슨설명</li>
+                </ul>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
