--- a/2.html
+++ b/2.html
@@ -3,18 +3,63 @@
   <head>
     <title>YOON'S NBA - LAL</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">YOON'S NBA</a></h1>
-    <ul>
-      <li><a href="1.html">GSW</a></li>
-      <li><a href="2.html">LAL</a></li>
-      <li><a href="3.html">LAC</a></li>
-    </ul>
-    <h1>Los Angeles Lakers</h1><img src="basketball1.jpg" width="250">
-    <p><h4>Team of NBA.(<a href="https://www.nba.com/lakers/" target="_black" title="LAL official website">LAL</a>)</h4></p>
-    <p><em>Lebron James</em><br>희대의 성공률30%대 '자칭' 우승 청부사.<br>개쓰레기 농구계의 공공의적.<br>전세계 농구인들의 공통 빌런.</p>
-    <p style="margin-top:45px;"><em>Anthony Davis</em><br>한계가 명확한 반 쪽 짜리 슈퍼스타.<br>팀 옮기고 싶어서 징징거리며 뉴올리언스 팬들의 마음에
-       큰 상처를 입힘</p>
+
+    <div class="main-text">
+      <div class="team-list">
+        <ul>
+          <li><a href="1.html">GSW</a></li>
+          <li><a href="2.html">LAL</a></li>
+          <li><a href="3.html">LAC</a></li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+        </ul>
+      </div>
+
+      <div class="page-intro">
+        <div class="team-logo">
+          <h2><a href="https://www.nba.com/lakers/" target="_black" title="LAL official website">LA레이커스</a></h2>
+        </div>
+        <div class="team-intro">
+          <div class="team-logo">
+            <img src="LAL1.png">
+          </div>
+          <div class="team-info">
+            <p>팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명
+               팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명</p>
+          </div>
+          <div class="team-player">
+            <em>Lebron James</em>
+              <div class="james-info">
+                <ul>
+                  <li>릅택동설명</li>
+                  <li>릅택동설명</li>
+                  <li>릅택동설명</li>
+                  <li>릅택동설명</li>
+                </ul>
+              </div>
+            <em>Anthony Davis</em>
+              <div class="davis-info">
+                <ul>
+                  <li>갈매기설명</li>
+                  <li>갈매기설명</li>
+                  <li>갈매기설명</li>
+                  <li>갈매기설명</li>
+                </ul>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
