--- a/3.html
+++ b/3.html
@@ -3,17 +3,63 @@
   <head>
     <title>YOON'S NBA - LAC</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">YOON'S NBA</a></h1>
-    <ul>
-      <li><a href="1.html">GSW</a></li>
-      <li><a href="2.html">LAL</a></li>
-      <li><a href="3.html">LAC</a></li>
-    </ul>
-    <h1>Los Angeles Clippers</h1><img src="basketball1.jpg" width="250">
-    <p><h4>Team of NBA.(<a href="https://www.nba.com/clippers/" target="_black" title="LAC official website">LAC</a>)</h4></p>
-    <p><em>Paul George</em><br>간지가 너무 넘치는 대단한 놈.<br>하지만 우승을 위해 개장수 밑으로 기어들어감.<br>아무튼 릅택동보다는 호감.</p>
-    <p style="margin-top:45px;"><em>Kawhi Leonard</em><br>릅택동 잡으러 서부로 온 개장수.<br>릅택동의 실질적 주인.<br>앞에선 입 다물고 뒤에선
-      정치하는 NBA 최고의 중상모략가.</p>
+
+    <div class="main-text">
+      <div class="team-list">
+        <ul>
+          <li><a href="1.html">GSW</a></li>
+          <li><a href="2.html">LAL</a></li>
+          <li><a href="3.html">LAC</a></li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+        </ul>
+      </div>
+
+      <div class="page-intro">
+        <div class="team-logo">
+          <h2><a href="https://www.nba.com/clippers/" target="_black" title="LAC official website">LA클리퍼스</a></h2>
+        </div>
+        <div class="team-intro">
+          <div class="team-logo">
+            <img src="LAC1.png">
+          </div>
+          <div class="team-info">
+            <p>팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명
+               팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명팀설명</p>
+          </div>
+          <div class="team-player">
+            <em>Kawhi Leonard</em>
+              <div class="leonard-info">
+                <ul>
+                  <li>개장수설명</li>
+                  <li>개장수설명</li>
+                  <li>개장수설명</li>
+                  <li>개장수설명</li>
+                </ul>
+              </div>
+            <em>Paul George</em>
+              <div class="george-info">
+                <ul>
+                  <li>폴간지설명</li>
+                  <li>폴간지설명</li>
+                  <li>폴간지설명</li>
+                  <li>폴간지설명</li>
+                </ul>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
