--- a/index.html
+++ b/index.html
@@ -3,15 +3,33 @@
   <head>
     <title>YOON'S NBA - Welcome</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="index.html">YOON'S NBA</a></h1>
-    <ul>
-      <li><a href="1.html">GSW</a></li>
-      <li><a href="2.html">LAL</a></li>
-      <li><a href="3.html">LAC</a></li>
-    </ul>
-  <h3>이 페이지는 NBA를 즐기는 모든 팬들의 마음을 대변하며, 그 어떠한 NBA페이지보다 중립적인 스탠스를 취합니다.</h3>
-  <p style="margin-top:45px;">현재는 리그를 대표하는 선수들이 속한 팀만 간략히 리뷰하지만 리뷰 범위를 늘려 나갈 계획이니 보고 싶어도 좀 참아라^^;</p>
+
+    <div class="main-text">
+      <div class="team-list">
+        <ul>
+          <li><a href="1.html">GSW</a></li>
+          <li><a href="2.html">LAL</a></li>
+          <li><a href="3.html">LAC</a></li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+          <li>team</li>
+        </ul>
+      </div>
+
+      <div class="page-intro">
+        <h3>이 페이지는 NBA를 즐기는 모든 팬들의 마음을 대변하며, 그 어떠한 NBA페이지보다 중립적인 스탠스를 취합니다.</h3>
+        <p style="margin-top:45px;">현재는 리그를 대표하는 선수들이 속한 팀만 간략히 리뷰하지만 리뷰 범위를 늘려 나갈 계획이니 보고 싶어도 좀 참아라^^;</p>
+      </div>
+    </div>
   </body>
 </html>
